<resources>
    <string name="app_name">zajel</string>
    <string name="invalid_email">Please insert valid Email</string>
    <string name="password_empty">Please the password should not be empty</string>
    <string name="password_not_right">The password must be at least 8 characters</string>
    <string name="password_not_match">Your password does not match</string>
    <string name="empty_name">Please Enter your first name</string>
    <string name="empty_date">Please Enter your Birthday</string>
    <string name="empty_last_name">Please Enter you last name</string>
    <string name="empty_phone_number">Please Enter you phone number</string>

    <string name="empty_title">Please Enter the title</string>
    <string name="empty_author">Please Enter the author </string>
    <string name="empty_publish_date">Please Enter the publish date</string>
    <string name="empty_page_count">Please Enter the number of pages</string>
    <string name="empty_description">Please Enter the description</string>
    <string name="empty_language">Please Enter the language</string>
    <string name="empty_genre">Please Enter the genre</string>
    <string name="empty_photo">Please upload the book cover.</string>
    <string name="empty_status">Please Enter the status</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_signing_up_you_agree_on_our_terms_and_conditions">By signing up you agree on our Terms and Privacy Policy</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="forgot_password">Forgot password</string>

    <string name="you_ll_need_to_enable_your_location_in_order_to_use_zajel">You\'ll need to enable your location in order to use Zajel</string>
    <string name="oops">Oops</string>
    <string name="in_order_to_use_zajel_please_enable_your_location_n_n_go_to_app_settings_permissions"><![CDATA[In order to use Zajel please enable your location\n\nGo to App Settings > Permissions]]></string>
    <string name="open_settings">Open Settings</string>
    <string name="you_need_to_allow_access_to_location_in_order_to_use_zajel_nplease_try_again_and_hit_ok">You need to allow access to location in order to use Zajel.\nPlease try again and hit OK.</string>
    <string name="try_again">Try Again</string>
    <string name="allow_location">Allow Location</string>
    <string name="enable_location">Enable Location</string>
    <string name="home">Home</string>
    <string name="wishlist">WishList</string>
    <string name="profile">Profile</string>
    <string name="choose_file_to_upload">Choose File to Upload..</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add">Add</string>
    <string name="genre">Genre</string>
    <string name="language">Language</string>
    <string name="description">Description</string>
    <string name="page_count">Page Count</string>
    <string name="publish_year">Publish year</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="choose_from_library">Choose From Library</string>
    <string name="take_photo">Take Photo</string>
    <string name="cancel">Cancel</string>
    <string name="requests">Requests</string>
    <string name="sent_requests">Sent Requests</string>
    <string name="received_requests">Received Requests</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="message">Message</string>
    <string name="borrow">Borrow</string>
    <string name="session_expired">Session Expired</string>
    <string name="your_session_has_been_expired_please_log_in_again">Please login again</string>
    <string name="okay">Okay</string>
    <string name="type_something">Type something</string>
    <string name="my_books">My Books</string>
    <string name="logout">Logout</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="add_book">Add Book</string>
    <string name="terms_link">https://zajelbook.com/terms?locale=en</string>
    <string name="privacy_link">https://zajelbook.com/policy?locale=en</string>
    <string name="about_link">https://zajelbook.com/about?locale=en</string>
    <string name="forgot_passowrd_link">https://zajelbook.com/forget_password?locale=en</string>
    <string name="terms">Terms</string>
    <string name="update">Update</string>
    <string name="update_book">Update Book</string>
    <string name="about">About</string>
    <string name="notifications">Notifications</string>
    <string name="done">Done</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_updated_">Profile Updated Successfully</string>
    <string name="book_added_success">Book Added Successfully</string>
    <string name="book_updated_success">Book Updated Successfully</string>
    <string name="share">Share</string>
    <string name="it_looks_like_there_are_no_books_around_you_please_help_us_spread_the_word">It looks like there are no books around you please help us spread the word.</string>
    <string name="browse_books">Browse Books</string>
    <string name="you_don_t_have_any_received_requests_yet">You don\'t have any received requests yet.</string>
    <string name="you_haven_t_sent_any_request_yet">You haven\'t sent any request yet.</string>
    <string name="you_haven_t_received_any_notifications_yet">You haven\'t received any notifications yet.</string>
    <string name="you_haven_t_add_any_books_yet">You haven\'t add any books yet.</string>
    <string name="rate_us">Rate us</string>
    <string name="how_much_do_you_rate_zajel">How much do you rate Zajel ?</string>

    <string name="leave_feedback">Leave feedback?</string>
    <string name="leave_feedback_message">We\'d love to know how we can make Zajel even better for you. Would you like to leave us some feedback?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="thanks">Thank You</string>
    <string name="rate_message">We\'re so happy to hear that you love using Zajel!\n\nWill you please rate us in the app store?</string>
    <string name="no_thanks">No thanks</string>
    <string name="login_to_see_reqeuests">Login to see your Requests</string>
    <string name="login_to_see_notification">Login to see your notifications</string>
    <string name="login_to_see_profile">Login to see your profile</string>
    <string name="verify_email">Verify Email</string>
    <string name="please_copy_the_4_digits_in_your_email">Please copy the 4 digits in your Email</string>
    <string name="note_don_t_forget_to_check_your_junk_spam_folder">Note don\'t forget to check your junk/spam folder</string>
    <string name="verify">Verify</string>
    <string name="we_have_sent_an_email_to">We have sent an Email to</string>
    <string name="status">Status</string>
    <string name="resend_email">Resend Email</string>
    <string name="email_sent">Email sent successfully</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="send">Send</string>
    <string name="borrowed">Borrowed</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
</resources>
