<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/header"
            style="@style/toolbar_style">

            <TextView
                style="@style/page_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="20dp"
                android:text="@string/verify_email" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/header"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">


            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/new_email_icon"
                tools:ignore="ContentDescription" />

            <TextView
                style="@style/text_regular_16_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/we_have_sent_an_email_to" />

            <TextView
                android:id="@+id/email_TextView"
                style="@style/text_bold_16_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical|center_horizontal" />

            <TextView
                style="@style/text_regular_16_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/please_copy_the_4_digits_in_your_email" />

            <TextView
                style="@style/text_regular_16_grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/note_don_t_forget_to_check_your_junk_spam_folder"
                android:visibility="visible" />



            <EditText
                android:id="@+id/pinEditText"
                style="@style/text_bold_26_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_60sdp"
                android:inputType="number"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:maxLength="4" />

            <TextView
                android:id="@+id/resend_TextView"
                style="@style/text_bold_16_black"
                android:layout_width="match_parent"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/resend_email"
                android:visibility="visible" />

        </LinearLayout>

        <Button
            android:id="@+id/next_button"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:enabled="false"
            android:text="@string/verify" />

    </RelativeLayout>

</layout>

