<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fafafa"
        android:orientation="vertical">


        <RelativeLayout style="@style/toolbar_style">

            <TextView
                style="@style/page_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/notifications" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="5dp"
                android:background="@color/divider" />

        </RelativeLayout>

        <LinearLayout
            android:id="@id/empty_screen_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">


            <TextView
                style="@style/text_regular_16_grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/you_haven_t_received_any_notifications_yet" />


            <Button
                android:id="@id/empty_screen_button"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_rounded"
                android:text="@string/browse_books" />


        </LinearLayout>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="#fafafa"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/notifications_RecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fafafa" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </LinearLayout>
</layout>
